1.17cvs
* "examine" command output is like display's and is more useful.

* Fix a bad bug (at least for me) where we would get the wrong path in
  tracing through an "import x as y". This happened only if we invoked
  from a directory other than where the debugged program lives and we
  stepped into such an imported method. The fix is to save the the
  dirname of the script in the debugger instance variable.

* Fix bug when using set trace introduced in 1.16 in adding "command".

* Add "directory" and "show directories" commands. 

* All "show" and "info" commands allow unique abbreviations in the
  subcommand name and in help. E.g. "show dir" for "show directories";
  "help dir" for "help directories".

* The "turn-on-pydbtrack" command turns removes py-pdbtrack from
  comint-output-filter-functions which was removing the cursor in the
  source window.

* Tolerance for version 2.3.4. (It's what I have to use at work.)

* Tolerance for version 2.5

* Allow info, and set help strings to be overwritten.

* More fexible and more general output by no longer assuming we
  write to sys.stdout. Rather the output object is saved in the
  instance variable, which could be and often is the same as
  sys.stdout, but doesn't need to be. This change may make
  communication used in remote debugging and thread debugging
  simpler. Many thanks to Matt Flemming for the patch.

* --output and --error no longer modify program's stdout/stderr.

1.16 2006-04-27

*  Add gdb "command" - run commands on a breakpoint. Code from current
   pdb sources, but we follow gdb more closely.

*  Allow one specify in the Pdb class Cmd's "completekey" binding.
   (Also in current pdb sources.)

*  Line tracing now shows source text.

*  Document how to turn on and off from program control. 

* "list" command is more like gdb's and can accept filename:lineo if
   that's all that's given (Suggestion from Matt Fleming). Was also
   off by one in line number listings.
