@@ -1,5 +1,5 @@
 #!@PYTHON@ -t
-# $Id: test.py.in,v 1.21 2006/07/04 13:40:06 rockyb Exp $ -*- Python -*-
+# $Id: test.py.in,v 1.22 2006/07/09 00:43:12 rockyb Exp $ -*- Python -*-
 "Unit test for Extended Python debugger "
 import difflib, os, pprint, time, sys, unittest
 
@@ -157,6 +157,12 @@ class PdbTests(unittest.TestCase):
                             pythonfile='%shanoi.py' % srcdir,
                             outfile='logging.out')
         self.assertEqual(True, result, "logging")
+
+    def test_no_script(self):
+        """Test running without a script"""
+        result=run_debugger(testname='noscript',
+                            pythonfile=None)
+        self.assertEqual(True, result, "running without a Python script")
 
     def test_pwd_cd(self):
         """Test pwd and cd commands"""
